Returning ViewModel from Presenter instead of bool value

--- a/CleanSample.UI/Home/Index.cshtml
+++ b/CleanSample.UI/Home/Index.cshtml
@@ -13,7 +13,7 @@
 
 
 <div class="text-center">
-    <p>Hi! That's not a working example, but just a simple demo of clean architecture flow</p>
+    <p>Hi! That's not a completely working example, but just a simple demo of clean architecture flow</p>
     <label asp-for="Time"></label>
     <input type="datetime-local" asp-for="Time" />
 
@@ -40,7 +40,7 @@
                 "RequestVerificationToken": "@GetAntiXsrfRequestToken()"
             },
             success: function (data) {
-
+                // result is returned by SignalR (in site.js)
             },
             error: function (request, error) {
 
